tests/baselines/reference/parenthesisDoesNotBlockAliasSymbolCreation.errors.txt
parenthesisDoesNotBlockAliasSymbolCreation.ts(13,18): error TS2352: Conversion of type 'null' to type 'A<{ x: number; }>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Type 'null' is not comparable to type '{ x: number; }'.
parenthesisDoesNotBlockAliasSymbolCreation.ts(14,19): error TS2352: Conversion of type 'null' to type 'A2<{ x: number; }>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Type 'null' is not comparable to type '{ x: number; }'.
parenthesisDoesNotBlockAliasSymbolCreation.ts(15,19): error TS2352: Conversion of type 'null' to type '{ x: number; } & InvalidKeys<"a">' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Type 'null' is not comparable to type '{ x: number; }'.
parenthesisDoesNotBlockAliasSymbolCreation.ts(16,19): error TS2352: Conversion of type 'null' to type '{ x: number; } & InvalidKeys2<"a">' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Type 'null' is not comparable to type '{ x: number; }'.


==== parenthesisDoesNotBlockAliasSymbolCreation.ts (4 errors) ====
    export type InvalidKeys<K extends string|number|symbol> = { [P in K]? : never };
    export type InvalidKeys2<K extends string|number|symbol> = (
        { [P in K]? : never }
    );
    
    export type A<T> = (
        T & InvalidKeys<"a">
    );
    export type A2<T> = (
        T & InvalidKeys2<"a">
    );
    
    export const a = null as A<{ x : number }>;
                     ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'null' to type 'A<{ x: number; }>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Type 'null' is not comparable to type '{ x: number; }'.
    export const a2 = null as A2<{ x : number }>;
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'null' to type 'A2<{ x: number; }>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Type 'null' is not comparable to type '{ x: number; }'.
    export const a3 = null as { x : number } & InvalidKeys<"a">;
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'null' to type '{ x: number; } & InvalidKeys<"a">' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Type 'null' is not comparable to type '{ x: number; }'.
    export const a4 = null as { x : number } & InvalidKeys2<"a">;
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'null' to type '{ x: number; } & InvalidKeys2<"a">' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Type 'null' is not comparable to type '{ x: number; }'.
    